--- a/LITReview/templates/posts.html
+++ b/LITReview/templates/posts.html
@@ -3,5 +3,5 @@
 {% block title %}LITReview – Posts{% endblock %}
 
 {% block content %}
-    <p>PAGE DE POST</p>
+    <h2 class="text-center">Vos posts</h2>
 {% endblock %}
