--- a/LITReview/templates/registration/login.html
+++ b/LITReview/templates/registration/login.html
@@ -4,12 +4,12 @@
 
 {% block content %}
     <h2>Inscrivez-vous maintenant</h2>
-    <button type="submit">S'inscrire</button>
+    <a class="btn btn-success" href="{% url 'signup' %}" role="button">S'inscrire</a>
 
     <h2>Connectez-vous</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Se connecter</button>
+        <button type="submit" class="btn btn-success">Se connecter</button>
     </form>
 {% endblock %}
