--- a/LITReview/static/css/styles.css
+++ b/LITReview/static/css/styles.css
@@ -1,3 +1,68 @@
+/* BASIC STYLE */
+body {
+  background-color: #F2F2F2;
+  padding-top: 120px;
+}
+
+/* TYPOGRAPHY */
+body {
+  color: #000;
+}
+
+h2 {
+  color: #595959;
+}
+
+/* HEADER */
+header {
+  background-color: #F2DEC4;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+/* BUTTON */
+.btn {
+  font-size: 1.1rem;
+  color: #000;
+  font-weight: 500;
+}
+
+.btn-success {
+  background-color: #F2DEC4;
+  border-color: #595959;
+}
+.btn-success:hover {
+  color: #000;
+  background-color: #D9B391;
+}
+
+.btn-outline-dark:hover {
+  color: #F2F2F2;
+  background-color: #595959;
+}
+
+/* LOGO */
 #logo {
-    width: 30px;
+  width: 3rem;
+  margin: 0.5rem;
+}
+
+/* LOGOUT */
+.logout {
+  padding: 0.5rem;
+}
+.logout span {
+  padding: 0 0.5rem;
+}
+
+/* NAVIGATION */
+.nav-link {
+  color: #595959;
+}
+.nav-link:hover {
+  color: #A68365;
+}
+
+.active {
+  color: #000;
 }
