--- a/LITReview/templates/base.html
+++ b/LITReview/templates/base.html
@@ -1,34 +1,48 @@
+<!DOCTYPE html>
 <html lang="fr">
     <head>
+        <title>{% block title %}LITReview{% endblock %}</title>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}LITReview{% endblock %}</title>
+
+        {% load bootstrap5 %}
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
 
         <!-- Add additional CSS/JS/IMAGES in static file -->
         {% load static %}
-        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
     </head>
+
     <body>
-        <a href="{% url 'login' %}">Test d'affichage pour connexion</a>
-        <a href="{% url 'signup' %}">Test d'affichage pour inscription</a>
-        <header>
-            <img id="logo" src="{% static 'images/logo.png' %}" alt="logo" class="d-inline-block align-text-top">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="{% url 'home' %}">Flux</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'posts' %}">Posts</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'follows' %}">Abonnements</a>
-                    </li>
-                </ul>
+
+        <header class="fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{% url 'home' %}"><img id="logo" src="{% static 'images/logo.png' %}" alt="logo" class="d-inline-block align-text-center">LITReview</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="nav justify-content-end" id="navbarNav">
+                        <ul class="nav justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Flux</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'posts' %}">Posts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'follows' %}">Abonnements</a>
+                            </li>
+                        </ul>
+                        <div class="logout align-text-bottom">
+                            <span>{{ user.get_username }}</span><a class="btn btn-outline-dark btn-sm" href="{% url 'logout' %}" role="button">Se déconnecter</a>
+                        </div>
+                    </div>
+                </div>
             </nav>
-            {{ user.get_username }}
-            <a href="{% url 'logout' %}">Se déconnecter</a>
         </header>
 
         <div class="container">
@@ -36,7 +50,5 @@
             {% endblock %}
         </div>
 
-        <!-- JavaScript -->
-        <script src="{% static 'js/scripts.js' %}"></script>
     </body>
 </html>
