--- a/LITReview/templates/follows.html
+++ b/LITReview/templates/follows.html
@@ -3,5 +3,7 @@
 {% block title %}LITReview – Abonnements{% endblock %}
 
 {% block content %}
-    <p>PAGE DES ABONNEMENTS</p>
+    <h2 class="text-center">Suivre d'autres utilisateurs</h2>
+    <h2 class="text-center">Abonnements</h2>
+    <h2 class="text-center">Abonnés</h2>
 {% endblock %}
