--- a/LITReview/templates/registration/signup.html
+++ b/LITReview/templates/registration/signup.html
@@ -3,11 +3,12 @@
 {% block title %}LITReview – Formulaire d'inscription{% endblock %}
 
 {% block content %}
-    <h1>Inscrivez-vous</h1>
+    <h2 class="text-center">Inscrivez-vous</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">S'inscrire</button>
+        <a class="btn btn-success" href="{% url 'login' %}" role="button">Retourner</a>
+        <button type="submit" class="btn btn-success">S'inscrire</button>
     </form>
         
 {% endblock %}
