--- a/LITReview/static/css/styles.css
+++ b/LITReview/static/css/styles.css
@@ -4,13 +4,14 @@ body {
   padding-top: 120px;
 }
 
+h2 {
+  color: #595959;
+  margin-bottom: 2rem;
+}
+
 /* TYPOGRAPHY */
 body {
   color: #000;
-}
-
-h2 {
-  color: #595959;
 }
 
 /* HEADER */
@@ -49,7 +50,7 @@ header {
 
 /* LOGOUT */
 .logout {
-  padding: 0.5rem;
+  padding-top: 0.2rem;
 }
 .logout span {
   padding: 0 0.5rem;
