--- a/LITReview/templates/base.html
+++ b/LITReview/templates/base.html
@@ -37,8 +37,8 @@
                                 <a class="nav-link" href="{% url 'follows' %}">Abonnements</a>
                             </li>
                         </ul>
-                        <div class="logout align-text-bottom">
-                            <span>{{ user.get_username }}</span><a class="btn btn-outline-dark btn-sm" href="{% url 'logout' %}" role="button">Se déconnecter</a>
+                        <div class="logout">
+                            <span class="align-middle">{{ user.get_username }}</span><a class="btn btn-outline-dark btn-sm" href="{% url 'logout' %}" role="button">Se déconnecter</a>
                         </div>
                     </div>
                 </div>
