--- a/LITReview/templates/registration/login.html
+++ b/LITReview/templates/registration/login.html
@@ -1,15 +1,31 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}LITReview – Connexion{% endblock %}
 
 {% block content %}
-    <h2>Inscrivez-vous maintenant</h2>
-    <a class="btn btn-success" href="{% url 'signup' %}" role="button">S'inscrire</a>
+    <div class="row justify-content-center">
 
-    <h2>Connectez-vous</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Se connecter</button>
-    </form>
+        <div class="col text-center">
+            <h2>Inscrivez-vous maintenant</h2>
+            <a class="btn btn-success" href="{% url 'signup' %}" role="button">S'inscrire</a>
+        </div>
+
+        <div class="col text-center">
+            <h2>Connectez-vous</h2>
+            <form method="post">
+                {% csrf_token %}
+                <div class="row justify-content-center">
+                    <div class="col-10 text-start">
+                        {{ form|crispy }}
+                        <div class="row">
+                            <div class="text-end">
+                                <button type="submit" class="btn btn-success">Se connecter</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
