--- a/LITReview/templates/registration/signup.html
+++ b/LITReview/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}LITReview – Formulaire d'inscription{% endblock %}
 
@@ -6,9 +7,16 @@
     <h2 class="text-center">Inscrivez-vous</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <a class="btn btn-success" href="{% url 'login' %}" role="button">Retourner</a>
-        <button type="submit" class="btn btn-success">S'inscrire</button>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                {{ form|crispy }}
+                <div class="row">
+                    <div class="text-end">
+                        <a class="btn btn-success" href="{% url 'login' %}" role="button">Retourner</a>
+                        <button type="submit" class="btn btn-success">S'inscrire</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
-        
 {% endblock %}
