--- a/LITReview/templates/base.html
+++ b/LITReview/templates/base.html
@@ -17,35 +17,34 @@
     </head>
 
     <body>
-
         <header class="fixed-top">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="{% url 'home' %}"><img id="logo" src="{% static 'images/logo.png' %}" alt="logo" class="d-inline-block align-text-center">LITReview</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    {% if user.is_authenticated %}
-                        <div class="nav justify-content-end" id="navbarNav">
-                            <ul class="nav justify-content-end">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Flux</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'posts' %}">Posts</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'follows' %}">Abonnements</a>
-                                </li>
-                            </ul>
-                            <div class="logout">
-                                <span class="align-middle">{{ user.get_username }}</span><a class="btn btn-outline-dark btn-sm" href="{% url 'logout' %}" role="button">Se déconnecter</a>
+                {% block sidebar %}
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="{% url 'home' %}"><img id="logo" src="{% static 'images/logo.png' %}" alt="logo" class="d-inline-block align-text-center">LITReview</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        {% if user.is_authenticated %}
+                            <div class="nav justify-content-end" id="navbarNav">
+                                <ul class="nav justify-content-end">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Flux</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'posts' %}">Posts</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'follows' %}">Abonnements</a>
+                                    </li>
+                                </ul>
+                                <div class="logout">
+                                    <span class="align-middle">{{ user.get_username }}</span><a class="btn btn-outline-dark btn-sm" href="{% url 'logout' %}" role="button">Se déconnecter</a>
+                                </div>
                             </div>
-                        </div>
-                    {% endif %}
-                    
-                </div>
+                        {% endif %}
+                    </div>
+                {% endblock %}
             </nav>
         </header>
 
