--- a/LITReview/templates/registration/login.html
+++ b/LITReview/templates/registration/login.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}LITReview – Connexion{% endblock %}
+
+{% block sidebar %}
+    <div class="container-fluid justify-content-center">
+        <a class="navbar-brand" href="{% url 'home' %}"><img id="logo" src="{% static 'images/logo.png' %}" alt="logo" class="d-inline-block align-text-center">LITReview</a>
+    </div>
+{% endblock %}
+
 
 {% block content %}
     <div class="row justify-content-center">
