--- a/LITReview/templates/registration/signup.html
+++ b/LITReview/templates/registration/signup.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}LITReview – Formulaire d'inscription{% endblock %}
+
+{% block sidebar %}
+    <div class="container-fluid justify-content-center">
+        <a class="navbar-brand" href="{% url 'home' %}"><img id="logo" src="{% static 'images/logo.png' %}" alt="logo" class="d-inline-block align-text-center">LITReview</a>
+    </div>
+{% endblock %}
 
 {% block content %}
     <h2 class="text-center">Inscrivez-vous</h2>
