--- a/LITReview/templates/home.html
+++ b/LITReview/templates/home.html
@@ -14,11 +14,29 @@
     </div>
 
     {% for ticket in ticket_list %}
-        <div>
-            <h3>{{ ticket.title }}</h3>
-            {% for review in ticket.reviews.all %}
-                <li>{{ review.review }} {{ review.headline }}</li>
-            {% endfor %}
+        <div class="d-flex justify-content-center">
+            <div class="card mb-3">
+                <div class="card-header">
+                    <p>{{ ticket.user }} a demandé une critique</p>
+                    <p>{{ ticket.time_created|time:"H:i" }}, {{ ticket.time_created|date:"D d M Y" }}</p>
+                </div>
+                <div class="row g-0 position-relative">
+                    {% if ticket.image %}
+                        <div class="col-md-4">
+                            <img src="{{ ticket.image.url}}" class="img-fluid rounded-start images" alt="{{ ticket.title }}">
+                        </div>
+                    {% endif %}
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ ticket.title }}</h5>
+                            <p class="card-text">{{ ticket.description }}</p>
+                        </div>
+                        <div class="card-btn">
+                            <a class="stretched-link btn btn-success" href="{% url 'home' %}" role="button">Créer une critique</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     {% endfor %}
 
