--- a/LITReview/templates/home.html
+++ b/LITReview/templates/home.html
@@ -6,10 +6,10 @@
 
     <div class="row justify-content-center">
         <div class="col text-end">
-            <a class="btn btn-success" href="{% url 'home' %}" role="button">Demander une critique</a>
+            <a class="btn btn-success" href="{% url 'ticket_new' %}" role="button">Demander une critique</a>
         </div>
         <div class="col text-start">
-            <a class="btn btn-success" href="{% url 'home' %}" role="button">Créer une critique</a>
+            <a class="btn btn-success" href="{% url 'review_new' %}" role="button">Créer une critique</a>
         </div>
     </div>
 
