--- a/LITReview/templates/posts.html
+++ b/LITReview/templates/posts.html
@@ -6,37 +6,13 @@
     <h2 class="text-center">Vos posts</h2>
 
     {% for ticket in ticket_list %}
-        <div class="d-flex justify-content-center">
-            <div class="card mb-3">
-                <div class="card-header">
-                    <p>{{ ticket.user }} a demandé une critique</p>
-                    <p>{{ ticket.time_created|time:"H:i" }}, {{ ticket.time_created|date:"D d M Y" }}</p>
-                </div>
-                <div class="row g-0 position-relative">
-                    {% if ticket.image %}
-                        <div class="col-md-4">
-                            <img src="{{ ticket.image.url}}" class="img-fluid rounded-start images" alt="{{ ticket.title }}">
-                        </div>
-                    {% endif %}
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ ticket.title }}</h5>
-                            <p class="card-text">{{ ticket.description }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer text-center text-muted">
-                    <div class="row justify-content-center">
-                        <div class="col text-end">
-                            <a class="btn btn-success" href="{% url 'ticket_edit' ticket.pk %}" role="button">Modifier</a>
-                        </div>
-                        <div class="col text-start">
-                            <a class="btn btn-success" href="{% url 'ticket_delete' ticket.pk %}" role="button">Supprimer</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% if ticket.reviews.all %}
+            {% for review in ticket.reviews.all %}
+                {% include 'include/review_snippet.html' %}
+                {% endfor %}
+        {% else %}
+            {% include 'include/ticket_snippet.html' %}
+        {% endif %}
     {% endfor %}
     
 {% endblock %}
