--- a/LITReview/templates/base.html
+++ b/LITReview/templates/base.html
@@ -14,6 +14,7 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
         <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     </head>
 
     <body>
