--- a/LITReview/templates/include/review_snippet.html
+++ b/LITReview/templates/include/review_snippet.html
@@ -1,19 +1,39 @@
 <div class="d-flex justify-content-center">
-        <div class="card col-md-8">
-            <div class="card-header">
-                {% if review.user.id == user.id %}
-                    <p>Vous avez publié une critique</p> 
-                {% else %}
-                    <p>{{ review.user }} a publié une critique</p> 
-                {% endif %}
-                <p>{{ review.time_created|time:"H:i" }}, {{ review.time_created|date:"D d M Y" }}</p>
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">{{ review.headline }} – {{ review.rating }}</h5>
-                <p class="card-text">{{ review.body }}</p>
-            </div>
-
-            {% include 'include/ticket_snippet.html' %}
-
+    <div class="card col-md-8">
+        <div class="card-header">
+            {% if review.user.id == user.id %}
+                <p>Vous avez publié une critique</p> 
+            {% else %}
+                <p>{{ review.user }} a publié une critique</p> 
+            {% endif %}
+            <p>{{ review.time_created|time:"H:i" }}, {{ review.time_created|date:"D d M Y" }}</p>
         </div>
-</div>rating
+        <div class="card-body">
+            <h5 class="card-title">
+                {{ review.headline }} – 
+                {% if review.rating == 1 %}<i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
+                {% elif review.rating == 2 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
+                {% elif review.rating == 3 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
+                {% elif review.rating == 4 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
+                {% elif review.rating == 5 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                {% endif %}
+            </h5>
+
+            <p class="card-text">{{ review.body }}</p>
+        </div>
+
+        {% include 'include/ticket_snippet.html' %}
+
+        <div class="card-footer text-center text-muted">
+            <div class="row justify-content-center">
+                <div class="col text-end">
+                    <a class="btn btn-success" href="{% url 'home' %}" role="button">Modifier</a>
+                </div>
+                <div class="col text-start">
+                    <a class="btn btn-success" href="{% url 'home' %}" role="button">Supprimer</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
