--- a/LITReview/templates/ticket_edit.html
+++ b/LITReview/templates/ticket_edit.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}LITReview – Modifier votre ticket{% endblock %}
 
 {% block content %}
 
+    <h2 class="text-center">Modifier votre ticket</h2>
+
     <form action="" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Envoyer">
+        {{ form|crispy }}
+        <input class="btn btn-success" type="submit" value="Envoyer">
     </form>
 
 {% endblock content %}
