--- a/LITReview/templates/ticket_new.html
+++ b/LITReview/templates/ticket_new.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}LITReview – Créer un ticket{% endblock %}
 
@@ -8,8 +9,8 @@
     
     <form action="" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Envoyer">
+        {{ form|crispy }}
+        <input class="btn btn-success" type="submit" value="Envoyer">
     </form>
 
 {% endblock %}
