--- a/LITReview/templates/ticket_edit.html
+++ b/LITReview/templates/ticket_edit.html
@@ -7,7 +7,7 @@
 
     <h2 class="text-center">Modifier votre ticket</h2>
 
-    <form action="" method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
         <input class="btn btn-success" type="submit" value="Envoyer">
