--- a/LITReview/templates/posts.html
+++ b/LITReview/templates/posts.html
@@ -7,20 +7,18 @@
 
     {% for ticket in ticket_list %}
 
-        {% if ticket.reviews.all %}
-            {% for review in ticket.reviews.all %}
-            {% if review.user.id == user.id %}
-                {% include 'include/review_snippet.html' %}
-            {% endif %}
+        {% if ticket.review_ticket.all %}
+            {% for review in ticket.review_ticket.all %}
+                {% if review.user.id == user.id %}
+                    {% include 'include/review_snippet.html' %}
+                {% endif %}
             {% endfor %}
         {% else %}
             {% if ticket.user.id == user.id %}
                 {% include 'include/ticket_snippet.html' %}
             {% endif %}
         {% endif %}
-
+    
     {% endfor %}
-
-
     
 {% endblock %}
