--- a/LITReview/templates/ticket_delete.html
+++ b/LITReview/templates/ticket_delete.html
@@ -12,6 +12,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <input class="btn btn-success" type="submit" value="Supprimer">
+        <a class="btn btn-success" href="{% url 'posts' %}" role="button">Annuler</a>
     </form>
 
 {% endblock content %}
