--- a/LITReview/templates/ticket_new.html
+++ b/LITReview/templates/ticket_new.html
@@ -11,6 +11,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <input class="btn btn-success" type="submit" value="Envoyer">
+        <a class="btn btn-success" href="{% url 'home' %}" role="button">Annuler</a>
     </form>
 
 {% endblock %}
