--- a/LITReview/templates/base.html
+++ b/LITReview/templates/base.html
@@ -33,7 +33,7 @@
                                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Flux</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Posts</a>
+                                        <a class="nav-link" href="{% url 'posts' %}">Posts</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'follows' user.pk %}">Abonnements</a>
