--- a/LITReview/templates/home.html
+++ b/LITReview/templates/home.html
@@ -6,11 +6,21 @@
 
     <div class="row justify-content-center">
         <div class="col text-end">
-            <a class="btn btn-success" href="#" role="button">Demander une critique</a>
+            <a class="btn btn-success" href="{% url 'ticket_new' %}" role="button">Demander une critique</a>
         </div>
         <div class="col text-start">
-            <a class="btn btn-success" href="#" role="button">Créer une critique</a>
+            <a class="btn btn-success" href="#" role="button">Créer une critique/review detail</a>
         </div>
     </div>
+
+    {% for ticket in ticket_list %}
+        {% if ticket.review_ticket.all %}
+            {% for review in ticket.review_ticket.all %}
+                {% include 'include/review_snippet.html' %}
+                {% endfor %}
+        {% else %}
+            {% include 'include/ticket_snippet.html' %}
+        {% endif %}
+    {% endfor %}
 
 {% endblock %}
