--- a/LITReview/templates/base.html
+++ b/LITReview/templates/base.html
@@ -54,6 +54,8 @@
             {% endblock %}
         </div>
 
+        <hr style="color: transparent; margin-top: 60px;">
+
         <footer class="footer mt-auto py-3 fixed-bottom">
             <div class="text-center">
                 © 2023 - LitReview
