--- a/LITReview/templates/home.html
+++ b/LITReview/templates/home.html
@@ -9,13 +9,13 @@
             <a class="btn btn-success" href="{% url 'ticket_new' %}" role="button">Demander une critique</a>
         </div>
         <div class="col text-start">
-            <a class="btn btn-success" href="#" role="button">Créer une critique/review detail</a>
+            <a class="btn btn-success" href="{% url 'review_new' %}" role="button">Créer une critique</a>
         </div>
     </div>
 
     {% for ticket in ticket_list %}
-        {% if ticket.review_ticket.all %}
-            {% for review in ticket.review_ticket.all %}
+        {% if ticket.reviews.all %}
+            {% for review in ticket.reviews.all %}
                 {% include 'include/review_snippet.html' %}
                 {% endfor %}
         {% else %}
