--- a/LITReview/templates/include/ticket_snippet.html
+++ b/LITReview/templates/include/ticket_snippet.html
@@ -20,8 +20,8 @@
                     <p class="card-text">{{ ticket.description }}</p>
                 </div>
                 <div class="card-btn">
-                    {% if not ticket.review_ticket.all and not ticket.author.id == user.id and request.path == '/' %}
-                        <a class="stretched-link btn btn-success" href="#" role="button">Créer une critique</a>
+                    {% if not ticket.reviews.all and not ticket.author.id == user.id and request.path == '/' %}
+                        <a class="stretched-link btn btn-success" href="{% url 'review_add' ticket.pk %}" role="button">Créer une critique</a>
                     {% endif %}
                 </div>
             </div>
