--- a/LITReview/templates/include/review_snippet.html
+++ b/LITReview/templates/include/review_snippet.html
@@ -28,7 +28,7 @@
             <div class="card-footer text-center text-muted">
                 <div class="row justify-content-center">
                     <div class="col text-end">
-                        <a class="btn btn-success" href="{% url 'home' %}" role="button">Modifier</a>
+                        <a class="btn btn-success" href="{% url 'review_edit' review.pk %}" role="button">Modifier</a>
                     </div>
                     <div class="col text-start">
                         <a class="btn btn-success" href="#" role="button">Supprimer</a>
