Ajout de la fonctionnalité de suppression de la critique

--- a/LITReview/templates/include/review_snippet.html
+++ b/LITReview/templates/include/review_snippet.html
@@ -31,7 +31,7 @@
                         <a class="btn btn-success" href="{% url 'review_edit' review.pk %}" role="button">Modifier</a>
                     </div>
                     <div class="col text-start">
-                        <a class="btn btn-success" href="#" role="button">Supprimer</a>
+                        <a class="btn btn-success" href="{% url 'review_delete' review.pk %}" role="button">Supprimer</a>
                     </div>
                 </div>
             </div>
