Affichage séparé de la critique et du ticket

--- a/LITReview/templates/posts.html
+++ b/LITReview/templates/posts.html
@@ -18,6 +18,8 @@
                 {% include 'include/ticket_snippet.html' %}
             {% endif %}
         {% endif %}
+
+        {% include 'include/ticket_snippet.html' %}
     
     {% endfor %}
     
