Ajout des boutons radio des reviews

--- a/LITReview/templates/include/review_snippet.html
+++ b/LITReview/templates/include/review_snippet.html
@@ -11,7 +11,8 @@
         <div class="card-body">
             <h5 class="card-title">
                 {{ review.headline }} – 
-                {% if review.rating == 1 %}<i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
+                {% if review.rating == 0 %}<i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
+                {% elif review.rating == 1 %}<i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
                 {% elif review.rating == 2 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
                 {% elif review.rating == 3 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i>
                 {% elif review.rating == 4 %}<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i>
